# Parallel_Computing_Second

./: .gitignore  CMakeLists.txt  README.md  cuda_kernel.cu  cuda_kernel_tiling.cu  cuda_main.cpp  cuda_main.cu  cuda_main_batch.cu  cuda_main_parallel_batch.cu  download_dataset.sh  download_datasets.sh  kernel_functions.h  main.cpp  parallel_main.cpp  parallel_version.cpp  sequential_kernel.cpp  sequential_main.cpp  test_parallel_main.cpp  test_sequential_main.cpp
scripts/: Plot_Generation.ipynb  on_big_dataset.sh  run_benchmark.py  run_benchmark_cuda.py  run_benchmark_omp.py
src/: cuda_kernel.cu  cuda_kernel.cuh  cuda_kernel_batch.cu  cuda_kernel_tiling.cu  kernel_functions.h  parallel_kernel.h  sequential_kernel.h
